# py-manifold

./: .env  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_test.yml
manifold/: __init__.py  _manifold_internal.pyi  simplification.py
src/: GridIndex.hpp  Intersection.cpp  Intersection.hpp  Manifold.cpp  Manifold.hpp  MeshProjector.cpp  MeshProjector.hpp  Octree.cpp  Octree.hpp  main.cpp  types.hpp  utils.hpp
tests/: generate_samples.py  run.py  test_manifold.py
