[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "manifold"
version = "1.0.0"
authors = [{name = "Jamie Donnelly", email = "jamie.donnelly@physicsx.ai"}]
requires-python = ">=3.10, <3.13"
description = "Python bindings for the C++ library: https://github.com/hjwdzh/ManifoldPlus"
dependencies = [
    "numpy~=1.25.0",
    "pyvista>=0.34.0",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "isort",
    "pytest~=7.2",
    "ruff"
]

[tool.setuptools.packages.find]
include = [
    "manifold"
]

[tool.setuptools.package-data]
manifold = ["*.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    "*.cpp",
    "*.hpp",
    "3rd_party/*",
    "build/*"
]

[tool.isort]
skip = [
    "3rd_party",
    "build"
]
skip_glob = [
    "**/__pycache__/*"
]

